--- a/payments/pom.xml
+++ b/payments/pom.xml
@@ -16,5 +16,17 @@
             <artifactId>api</artifactId>
             <version>${project.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.wiremock</groupId>-->
+<!--            <artifactId>wiremock</artifactId>-->
+<!--            <version>3.13.1</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.wiremock</groupId>-->
+<!--            <artifactId>wiremock-grpc-extension</artifactId>-->
+<!--            <version>0.11.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
