--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.akka</groupId>
     <artifactId>akka-javasdk-parent</artifactId>
-    <version>3.5.0</version>
+    <version>3.5.2</version>
   </parent>
   
   <groupId>com.example.akka</groupId>
@@ -21,5 +21,6 @@
     <module>api</module>
     <module>payments</module>
     <module>corebanking</module>
+    <module>ui</module>
   </modules>
 </project>
