--- a/backoffice/src/main/resources/application.conf
+++ b/backoffice/src/main/resources/application.conf
@@ -2,11 +2,16 @@ akka.javasdk.dev-mode.http-port=9020
 
 akka.javasdk {
   agent {
-    model-provider = openai
+    model-provider = anthropic
 
     openai {
       model-name = "gpt-4o-mini"
       api-key = ${?OPENAI_API_KEY}
+    }
+
+    anthropic {
+      model-name = "claude-sonnet-4-5-20250929"
+      api-key = ${?ANTHROPIC_API_KEY}
     }
   }
 }
