--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.akka</groupId>
     <artifactId>akka-javasdk-parent</artifactId>
-    <version>3.5.6</version>
+    <version>3.5.6-46-699a8a89-dev-SNAPSHOT</version>
   </parent>
   
   <groupId>com.example.akka</groupId>
